5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1594_1805.log
== SUBMITION (2019-04-02 12:50:15) 
-- CODE:
xa = float(input())
ya = float(input())
xb = float(input())
yb = float(input())

xm = (xb+xa)/2
ym = (yb+ya)/2

print(round(xm,1), round(yx,1))
-- EXECUTION TIME:
0.269221
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1805/main.py", line 9, in <module>
    print(round(xm,1), round(yx,1))
NameError: name 'yx' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:51:12) 
-- CODE:
xa = float(input())
ya = float(input())
xb = float(input())
yb = float(input())

xm = (xb+xa)/2
ym = (yb+ya)/2

print(round(xm,1))
print (round(yx,1))
-- EXECUTION TIME:
0.210304
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1805/main.py", line 10, in <module>
    print (round(yx,1))
NameError: name 'yx' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:51:17) 
-- CODE:
xa = float(input())
ya = float(input())
xb = float(input())
yb = float(input())

xm = (xb+xa)/2
ym = (yb+ya)/2

print(round(xm,1))
print (round(yx,1))
-- EXECUTION TIME:
0.127125
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1805/main.py", line 10, in <module>
    print (round(yx,1))
NameError: name 'yx' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:51:42) 
-- CODE:
xa = float(input())
ya = float(input())
xb = float(input())
yb = float(input())

xm = (xb+xa)/2
ym = (yb+ya)/2

print(round(xm,1))
print (round(yx,1))
-- EXECUTION TIME:
0.140819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1805/main.py", line 10, in <module>
    print (round(yx,1))
NameError: name 'yx' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:51:50) 
-- CODE:
xa = float(input())
ya = float(input())
xb = float(input())
yb = float(input())

xm = (xb+xa)/2
ym = (yb+ya)/2

print(round(xm,1))
print (round(yx,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print (round(yx,1))
NameError: name 'yx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:52:22) 
-- CODE:
xa = float(input())
ya = float(input())
xb = float(input())
yb = float(input())

xm = (xb+xa)/2
ym = (yb+ya)/2

print(round(xm,1))
print (round(ym,1))
-- EXECUTION TIME:
0.209508
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:30:09) 
-- CODE:
xa = float(input())
ya = float(input())
xb = float(input())
yb = float(input())

xm = (xb+xa)/2
ym = (yb+ya)/2

print(round(xm,1))
print (round(ym,1))
-- EXECUTION TIME:
0.177339
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
